# FamEx

./: LICENSE  app.json  package-lock.json  package.json  requirements.txt  shopping-analytics-ui.tsx  skills-lock.json
backend/: .dockerignore  .env.example  .gitignore  Dockerfile  alembic.ini  docker-compose.yml  pyproject.toml  requirements.txt
backend/alembic/: env.py
backend/alembic/versions/: 2026_06_15_0741-fe6d58b3fab7_create_users_table.py  2026_06_15_1106-923e63a88a30_update_models.py  2026_06_21_0001-add_registration_id_reason.py  2026_06_27_0001-add_shop_gstin.py  2026_06_27_0002-widen_shop_phone_gstin.py  2026_06_27_0003-add_doctor_qualification.py  2026_07_14_0001-add_bill_drafts_table.py  2026_07_19_0001-add_purchase_mode_brand_premiums.py
backend/app/: config.py  database.py  dependencies.py  main.py
backend/app/integrations/: gemini.py  supabase_auth.py  supabase_storage.py
backend/app/middleware/: rate_limit.py
backend/app/models/: __init__.py  bill.py  bill_draft.py  checklist.py  doctor.py  document.py  family.py  hospital.py  insurance.py  loan.py  medicine.py  prescription.py  purchase.py  reminder.py  shop.py  user.py
backend/app/routers/: ai.py  auth.py  dashboard.py  documents.py  family.py  insurance.py  loans.py  medical.py  reminders.py  shopping.py
backend/app/schemas/: dashboard.py  document.py  family.py  insurance.py  loan.py  medical.py  reminder.py  shopping.py  user.py
backend/app/services/: dashboard.py  document.py  family.py  insurance.py  loan.py  medical.py  search.py  shopping.py
mobile/: .env  app.json  eas.json  (+4 more)
(+76 files in other folders)
