[build-system]
requires = ["setuptools>=68.0", "wheel"]
build-backend = "setuptools.backends.legacy:build"

[project]
name = "nestledger-backend"
version = "0.1.0"
description = "NestLedger API backend"
requires-python = ">=3.11"
dependencies = [
    "fastapi==0.115.0",
    "uvicorn[standard]==0.30.0",
    "sqlalchemy[asyncio]==2.0.35",
    "asyncpg==0.29.0",
    "alembic==1.13.0",
    "pydantic-settings==2.5.0",
    "python-jose[cryptography]==3.3.0",
    "httpx==0.27.0",
    "python-multipart==0.0.9",
]

[tool.setuptools.packages.find]
where = ["."]
include = ["app*"]
